# obedio-yacht-crew-management

./: .env.docker.example  .env.example  .gitignore  ANALIZA_NEPOTREBNIH_FAJLOVA.md  ANALYSIS-TRACKING.md  API-WRAPPER-ANALYSIS.md  APPLICATION-READINESS-REPORT.md  ARCHITECTURE.md  ARCHIVE-OLD-DOCS.bat  AUDIO-UPLOAD-DECISION-ANALYSIS.md  BACKEND-ESP32-COMPLIANCE-FIX.md  BACKEND-INTEGRATION-ISSUES.md  BMAD-FIXES-MERGED.md  BMAD-MERGE-COMPLETE.md  BUGFIX-SUMMARY-2025-11-03.md  BUTLER-CALL-FLOW.md  BUTTON-SIMULATOR-FIXES-REPORT.md  CADDY_SETUP.md  CHECK-MQTT-STATUS.md  CLAUDE-CODE-FIX-ALL-PROMPT.md  CLAUDE-CODE-PROGRESS-REPORT.md  CLAUDE-CODE-START-INSTRUCTIONS.md  CLAUDE-COMPLETE-TASK-LIST-DETAILED.md  CLAUDE-FINAL-SUMMARY.md  CLAUDE-LOADING-STATES.md  CLAUDE-MANDATORY-WORKFLOW.md  CLAUDE-PWA-SUPPORT.md  CLAUDE-ROLE-BASED-DASHBOARD.md  CLAUDE-WORKFLOW.md  CLEANUP-OLD-FILES.md  CODE-ISSUES-FOR-FRIEND.md  CODER-PROMPT-FIX-API-CONNECTIVITY.md  COMPLETE-AUDIT-OF-MY-CHANGES.md  COMPLETE-DATABASE-MIGRATION-TEST-READY.md  COMPLETE-SYSTEM-ANALYSIS-WHAT-I-BROKE.md  COMPREHENSIVE-APP-ANALYSIS.md  COMPREHENSIVE-CODE-REVIEW.md  COMPREHENSIVE-SYSTEM-REVIEW-2025-01-22.md  COMPREHENSIVE-UPDATE-COMPARISON.md  CREW-INTERIOR-ONLY.md  (+152 more)
.bmad-core/: install-manifest.yaml
.claude/: obedio-development-rules.md  session-state.md  settings.local.json
ObedioWear/: ANDROID-APK-CONFIGURATION.md  BUILD-AND-TEST-INSTRUCTIONS.md  settings.gradle.kts
ObedioWear2/: local.properties  settings.gradle.kts
backend/: .dockerignore  .env.example  .gitignore  CREATE-ADMIN.bat  Dockerfile  MIGRATE-DATABASE.bat  README.md  READY_TO_TEST.md  RESET-CREW-ONLY.bat  SECURITY.md  TEST-BACKEND.bat  accept-request-for-testing.js  add-avatar-column.js  add-missing-crew-fields.js  add-nickname-column.js  add-shift-columns.js  add-wearos-device.js  assign-twatch-to-chloe.js  check-admin-user.js  check-all-devices.js  check-all-users.js  check-all-watches.js  check-assignments.js  check-button-ids.js  check-crew-columns.js  check-crew-departments.js  check-crew-status.js  check-crew-users.js  check-crew.js  check-database-status.js  check-device.js  check-devices.js  check-guest-dates.js  check-guest-types.js  check-guests.js  check-location-types.js  check-location.js  check-service-requests.js  check-shift-columns.js  check-shift-data.js  (+53 more)
diagnostics/: CREW-PAGE-DATA-AUDIT.md  CREW-PAGE-POST-FIX-AUDIT.md  MASTER-API-DOCUMENTATION.md  MASTER-REPORT.md  api-backend-STATUS.md  api-backend.md  api-frontend.md  api-mismatch.md  backend-routes-raw.txt  code-files.txt  directory-structure.txt  frontend-api-calls-raw.txt  git-status.txt  large-files.txt  prisma-migrate-status.txt  project-structure.md  recent-commits.txt  (+3 more)
hardware/obedio-esp-idf/main/: AUDIO_API_QUICK_REF.md  AUDIO_ARCHITECTURE.md  AUDIO_RECORDER_README.md  CMakeLists.txt  Kconfig.projbuild  accel_handler.c  accel_handler.h  audio_http_upload.c  audio_http_upload.h  audio_recorder.c  audio_recorder.h  audio_recorder_example.c  button_handler.c  button_handler.h  config.h  device_manager.c  device_manager.h  idf_component.yml  led_controller.c  led_controller.h  main.c  mqtt_handler.c  mqtt_handler.h  ota_handler.c  ota_handler.h  power_manager.c  power_manager.h  touch_handler.c  touch_handler.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
(+696 files in other folders)
